add several endpoints to UserController and service refactor code to make it cleaner remove no longer needed jacksonconfig