@@ -2,21 +2,24 @@ package com.iraychev.expenseanalyzer.service;
 
 import com.iraychev.expenseanalyzer.domain.entity.BankAccount;
 import com.iraychev.expenseanalyzer.domain.entity.BankConnection;
+import com.iraychev.expenseanalyzer.domain.entity.Transaction;
 import com.iraychev.expenseanalyzer.domain.entity.User;
 import com.iraychev.expenseanalyzer.dto.*;
 import com.iraychev.expenseanalyzer.exception.ResourceNotFoundException;
 import com.iraychev.expenseanalyzer.mapper.BankAccountMapper;
 import com.iraychev.expenseanalyzer.mapper.BankConnectionMapper;
+import com.iraychev.expenseanalyzer.mapper.TransactionMapper;
 import com.iraychev.expenseanalyzer.repository.BankAccountRepository;
 import com.iraychev.expenseanalyzer.repository.BankConnectionRepository;
 import com.iraychev.expenseanalyzer.repository.UserRepository;
-import lombok.extern.slf4j.Slf4j;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -29,6 +32,7 @@ public class BankConnectionService {
     private final BankAccountMapper bankAccountMapper;
     private final BankConnectionRepository bankConnectionRepository;
     private final BankConnectionMapper bankConnectionMapper;
+    private final TransactionMapper transactionMapper;
 
     public RequisitionDto createRequisition(RequisitionRequestDto requestDto) {
         return goCardlessIntegrationService.createRequisition(requestDto);
@@ -52,10 +56,10 @@ public class BankConnectionService {
                 .institutionId(requisition.getInstitutionId())
                 .institutionName("nz oshte")
                 .user(user)
-                .accounts(new ArrayList<>())  
+                .accounts(new ArrayList<>())
                 .build();
 
-        bankConnection = bankConnectionRepository.save(bankConnection); 
+        bankConnection = bankConnectionRepository.save(bankConnection);
 
         List<BankAccount> bankAccounts = new ArrayList<>();
         if (requisition.getAccounts() != null) {
@@ -64,7 +68,7 @@ public class BankConnectionService {
                         .accountId(accountId)
                         .iban("Not yet known")
                         .transactions(new ArrayList<>())
-                        .bankConnection(bankConnection) 
+                        .bankConnection(bankConnection)
                         .build();
                 bankAccounts.add(account);
             }
@@ -79,8 +83,25 @@ public class BankConnectionService {
                 .map(bankAccountMapper::toDTO)
                 .toList();
         List<BankAccountDto> updatedAccounts = goCardlessIntegrationService.fetchTransactions(accountDtos);
-        bankConnection.setAccounts(updatedAccounts.stream().map(bankAccountMapper::toEntity).toList());
-        bankConnectionRepository.save(bankConnection);
+        BankConnection finalBankConnection = bankConnection;
+        List<BankAccount> updatedBankAccounts = updatedAccounts.stream()
+                .map(dto -> {
+                    BankAccount account = bankAccountMapper.toEntity(dto);
+                    account.setBankConnection(finalBankConnection);
+                    account.setTransactions(dto.getTransactions().stream()
+                            .map(transactionDto -> {
+                                Transaction transaction = transactionMapper.toEntity(transactionDto);
+                                transaction.setBankAccount(account);
+                                return transaction;
+                            })
+                            .collect(Collectors.toList()));
+                    return account;
+                })
+                .toList();
+        updatedBankAccounts = bankAccountRepository.saveAll(updatedBankAccounts);
+
+        bankConnection.setAccounts(updatedBankAccounts);
+        bankConnection = bankConnectionRepository.save(bankConnection);
         return bankConnectionMapper.toDTO(bankConnection);
     }
 }
